# welkin-standard

./: .editorconfig  .gitattributes  .pre-commit-config.yaml  MARKUP.mink  MARKUP.wiki  README.mink  README.wiki  REUSE.toml  justfile
document/eng/: index.mink  index.wiki  semantics.mink  syntax.mink
html/eng/: index.html
standard/eng/: bootstrap.wiki
tools/: .gitignore  README.mink  README.wiki  REUSE.toml  main.py  pyproject.toml
tools/html/: main.py  pyproject.toml  template.html
tools/markup/: .gitignore  Gemfile  index.js  main.rb  package-lock.json  package.json  template.html5.ejs
tools/mm1/: main.py  pyproject.toml
tools/reuse/: pyproject.toml
