# SPDX-FileCopyrightText: 2025 Oscar Bender-Stone <oscar-bender-stone@protonmail.com>
# SPDX-License-Identifier: MIT

[project]
name = "mm1"
version = "0.1.0"
description = "Script to install and manage MetaMath One proofs for the Welkin Standard."
readme = "README.wiki"
requires-python = ">=3.13"
license = "MIT"
license-files = ["../LICENSES/MIT.txt"]
dependencies = [
    "maturin>=1.9.2",
]
